# pippy-ls

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  test.yaml
pippy_ls/: __init__.py  __main__.py  _version.py  config.toml  pippy_ls.py
scripts/: lint.sh  test.sh
src/pippy_ls/: feed.py  pippy_ls.py
