[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "pippy_ls"
version = "1.1.0"
description = "An open-source python package"
readme = "README.md"
authors = ["Pippy Long Stockings <zpprado@email.com>" ]
homepage = "https://github.com/pradoz/pippy-ls"
license = "MIT"
keywords = ["python", "package"]


[tool.poetry.dependencies]
python = ">=3.8"
feedparser = ">=5.2.0"
html2text = "*"
tomli = ">=2.0.1"


[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^20.8b1"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mkdocs = "^1.2"
mkdocs-material = "^8.1.4"
markdown-include = "^0.6.0"
asgi-lifespan = "1.*"
httpx = "^0.20.0"
pytest-asyncio = "^0.16.0"
pre-commit = "^2.16.0"

[tool.poetry.scripts]
pippy_ls = "pippy_ls.__main__:main"
test = "bash scripts/test.sh"
lint = "bash scripts/lint.sh"
format = "bash scripts/format.sh"
mkdocs = "bash scripts/docs-live.sh"
pre-commit = "pre-commit install"
